提取NodeHandler相关类的重复方法